--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,11 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pratamawijaya.opendotaarchcomponent.presentation.MainActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvMatches"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    tools:context="com.pratamawijaya.opendotaarchcomponent.presentation.detail.DetailActivity">
 
 </android.support.constraint.ConstraintLayout>
